<resources>

    <!-- Common-->
    <string name="app_name">Cleaning Tool</string>
    <string name="toolbar_header_title">Let\'s Clean</string>
    <string name="loading">Loading...</string>
    <string name="cont">Continue</string>
    <string name="min">Min</string>
    <string name="max">Max</string>
    <string name="area">Area</string>


    <!-- WelcomeScreen -->
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="about_us">About\nUs</string>
    <string name="service_provided">Services\nProvided</string>
    <string name="our_team">Our\nTeam</string>

    <!-- SignIn Screen -->
    <string name="welcome_back">WELCOME BACK PARTNER</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="mobile">Mobile</string>
    <string name="password">Password</string>
    <string name="start_cleaning">Start Cleaning</string>
    <string name="having_trouble">Having problem with login?</string>
    <string name="not_you"><![CDATA[Don\'t have Account Register]]></string>
    <!-- Signup Screen -->
    <string name="join_us">Join us to Clean</string>
    <string name="first_name">First name</string>
    <string name="name">Name</string>
    <string name="last_name">Last name</string>
    <string name="dob">Date of Birth</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="billing_address">Billing Address</string>
    <string name="already_been">Already been cleaning? SignIn</string>

    <!-- HomeScreen -->
    <string name="msg_dashboard">What can we help with?</string>
    <string name="menu_history">History</string>
    <string name="menu_search">Search</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_home">Home</string>


    <!-- Home Cleaning Screen -->
    <string name="enter_home_area">Enter area in sq. ft. </string>
    <string name="select_home_type">Select home type</string>
    <string name="select_price_range">Select price range</string>
    <string-array name="home_types">
        <item>1 BHK</item>
        <item>2 BHK</item>
        <item>3 BHK</item>
        <item>Independent House</item>
    </string-array>

    <!-- Office Cleaning Screen-->
    <string name="select_office_cleaning_type">Select office cleaning type</string>
    <string-array name="office_cleaning_type">
        <item>Single office floor + toilet</item>
        <item>Multiple office floor + toilet</item>
        <item>Single office floor</item>
        <item>Single office toilet</item>
        <item>Multiple office  toilet</item>
    </string-array>

    <!-- Service Company List Activity-->
    <string name="search">Search</string>

    <!--CustomServiceGridDialog-->
    <string name="avail_services">Available Cleaning Services</string>
    <string name="employee_avail">Emp Avl.</string>
    <string name="required_person">Req. Per</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="network_issue">Their is network issue, please check network connection</string>
    <string name="error_while_fetching_records">Error while fetching recordes</string>
    <string name="register">Register</string>
    <string name="book">Book</string>
</resources>