<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_home"
        android:icon="@drawable/home_tab"
        android:iconTint="@color/gray"
        android:title="@string/menu_home" />
    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/search_tab"
        android:iconTint="@color/gray"
        android:title="@string/menu_search" />
    <item
        android:id="@+id/menu_history"
        android:icon="@drawable/history_tab"
        android:iconTint="@color/gray"
        android:title="@string/menu_history" />
    <item
        android:id="@+id/menu_settings"
        android:icon="@drawable/setting_tab"
        android:iconTint="@color/gray"
        android:title="@string/menu_settings" />
</menu>