<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/margin_10">

        <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="0dp"
            android:layout_height="400dp"
            android:background="@drawable/rectangl_border"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <fragment
                android:id="@+id/fr_google_map"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </FrameLayout>

        <Button
            android:id="@+id/btn_continue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/common_green_button_bg"
            android:fontFamily="@font/worksans_bold"
            android:text="@string/cont"
            android:textColor="@color/white"
            android:textSize="@dimen/text_14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_price_range" />

        <Spinner
            android:id="@+id/spinner_home_type"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:entries="@array/home_types"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_home_type" />

        <EditText
            android:id="@+id/ed_area"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/enter_home_area"
            android:inputType="numberDecimal"
            android:textColor="@color/black"
            android:textSize="@dimen/text_20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_area" />

        <TextView
            android:id="@+id/tv_price_range_heading"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/select_price_range"
            android:textColor="@color/persian_blue"
            android:fontFamily="@font/worksans_medium"
            android:textSize="@dimen/text_20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ed_area" />

        <TextView
            android:id="@+id/tv_home_type"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/select_home_type"
            android:textColor="@color/persian_blue"
            android:fontFamily="@font/worksans_medium"
            android:textSize="@dimen/text_20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/frameLayout" />

        <TextView
            android:id="@+id/tv_area"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/worksans_medium"
            android:text="@string/area"
            android:textColor="@color/persian_blue"
            android:textSize="@dimen/text_20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinner_home_type" />

        <SeekBar
            android:id="@+id/seekbar_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:max="5000"
            android:progress="0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_price_range_heading" />

        <TextView
            android:id="@+id/tv_minprice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/min"
            android:textSize="@dimen/text_14sp"
            android:fontFamily="@font/worksans_bold"
            android:textColor="@color/persian_blue"
            app:layout_constraintStart_toStartOf="@+id/seekbar_price"
            app:layout_constraintTop_toBottomOf="@+id/seekbar_price" />

        <TextView
            android:id="@+id/tv_maxprice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/max"
            android:textSize="@dimen/text_14sp"
            android:fontFamily="@font/worksans_bold"
            android:textColor="@color/persian_blue"
            app:layout_constraintEnd_toEndOf="@+id/seekbar_price"
            app:layout_constraintTop_toBottomOf="@+id/seekbar_price" />

        <TextView
            android:id="@+id/tv_price_range"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="Price : 0"
            android:padding="@dimen/margin_5"
            android:textSize="@dimen/text_20sp"
            app:layout_constraintEnd_toStartOf="@+id/tv_maxprice"
            app:layout_constraintStart_toEndOf="@+id/tv_minprice"
            app:layout_constraintTop_toBottomOf="@+id/seekbar_price" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>