<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" android:layout_height="match_parent"
    android:layout_width="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/signup_bg">

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="@dimen/signup_logo_dimen"
            android:layout_height="@dimen/signup_logo_dimen"
            android:contentDescription="@string/app_name"
            android:scaleType="fitXY"
            android:src="@drawable/app_logo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.10" />

        <TextView
            android:id="@+id/tv_welcome_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_20"
            android:layout_marginTop="@dimen/margin_10"
            android:layout_marginEnd="@dimen/margin_20"
            android:fontFamily="@font/worksans_bold"
            android:text="@string/join_us"
            android:textColor="@color/white"
            android:textSize="@dimen/text_20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_logo" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_20"
            android:layout_marginLeft="@dimen/margin_20"
            android:layout_marginTop="@dimen/margin_16"
            android:layout_marginEnd="@dimen/margin_20"
            android:layout_marginRight="@dimen/margin_20"
            android:backgroundTint="@color/white"
            android:focusableInTouchMode="true"
            android:fontFamily="@font/worksans_bold"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:singleLine="true"
            android:hint="@string/name"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="@dimen/text_14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_welcome_back" />

        <TextView
            android:id="@+id/tv_dob"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_40"
            android:layout_marginStart="@dimen/margin_20"
            android:layout_marginTop="@dimen/margin_20"
            android:layout_marginEnd="@dimen/margin_20"
            android:fontFamily="@font/worksans_bold"
            android:gravity="start|bottom"
            android:paddingStart="5dp"
            android:paddingBottom="8dp"
            android:text="@string/dob"
            android:textColor="@color/white"
            android:textSize="@dimen/text_14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ed_name" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="0.1dp"
            android:layout_marginEnd="4dp"
            android:background="@color/white"
            app:layout_constraintEnd_toEndOf="@id/tv_dob"
            app:layout_constraintStart_toStartOf="@id/tv_dob"
            app:layout_constraintTop_toBottomOf="@id/tv_dob" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_20"
            android:layout_marginLeft="@dimen/margin_20"
            android:layout_marginTop="@dimen/margin_20"
            android:layout_marginEnd="@dimen/margin_20"
            android:layout_marginRight="@dimen/margin_20"
            android:backgroundTint="@color/white"
            android:focusableInTouchMode="true"
            android:fontFamily="@font/worksans_bold"
            android:imeOptions="actionDone"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            android:text=""
            android:hint="@string/email"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="@dimen/text_14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_dob" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_20"
            android:layout_marginTop="@dimen/margin_20"
            android:layout_marginEnd="@dimen/margin_20"
            android:autofillHints="@string/billing_address"
            android:backgroundTint="@color/white"
            android:focusableInTouchMode="true"
            android:fontFamily="@font/worksans_bold"
            android:hint="@string/billing_address"
            android:inputType="textMultiLine"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="@dimen/text_14sp"
            app:layout_constraintBottom_toTopOf="@+id/ed_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ed_email" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_20"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="@dimen/margin_20"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/worksans_bold"
            android:hint="@string/password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="@dimen/text_14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ed_address" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_20"
            android:layout_marginLeft="@dimen/margin_20"
            android:layout_marginTop="@dimen/margin_20"
            android:layout_marginEnd="@dimen/margin_20"
            android:layout_marginRight="@dimen/margin_20"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/worksans_bold"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:maxLength="18"
            android:singleLine="true"
            android:hint="@string/confirm_password"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="@dimen/text_14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ed_password" />

        <Button
            android:id="@+id/btn_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/margin_40"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/rounded_bg_secondary"
            android:fontFamily="@font/worksans_bold"
            android:gravity="center"
            android:paddingStart="@dimen/margin_50"
            android:paddingEnd="@dimen/margin_50"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:textSize="@dimen/text_20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ed_confirm_password"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>
