<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewmodal"
            type="com.cleantool.indiacleantool.appmodules.login.LoginViewModal" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black_bg"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:src="@drawable/group"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/worksans_bold"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="@dimen/_18ssp"
            android:layout_marginBottom="@dimen/_10sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_logo" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/top_half_rounded_border_white"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_sign_in">


            <EditText
                android:id="@+id/ed_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/margin_25"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:background="@drawable/rounded_border_gray"
                android:focusableInTouchMode="true"
                android:fontFamily="@font/worksans_medium"
                android:hint="@string/email"
                android:imeOptions="actionDone"
                android:inputType="textEmailAddress"
                android:padding="@dimen/_8sdp"
                android:singleLine="true"
                android:text="@={viewmodal.loginRequest.username}"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="@dimen/_13ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_sign_in" />


            <EditText
                android:id="@+id/ed_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:background="@drawable/rounded_border_gray"
                android:drawableRight="@drawable/ic_eye"
                android:fontFamily="@font/worksans_medium"
                android:hint="@string/password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxLength="18"
                android:padding="@dimen/_8sdp"
                android:singleLine="true"
                android:text="@={viewmodal.loginRequest.password}"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="@dimen/_13ssp"
                app:hintEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ed_username" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:background="@drawable/rounded_fill_green"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_having_trouble">


                <Button
                    android:id="@+id/btn_signin"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@null"
                    android:fontFamily="@font/worksans_medium"
                    android:gravity="center_vertical"
                    android:onClick="@{()-> viewmodal.authenticateUser()}"
                    android:padding="@dimen/_8sdp"
                    android:text="@string/login"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_13ssp" />

                <ImageButton
                    android:id="@+id/btn_signin_img"
                    android:layout_width="@dimen/_50sdp"
                    android:layout_height="match_parent"
                    android:background="@drawable/rounded_bg_dark_gray"
                    android:fontFamily="@font/worksans_bold"
                    android:onClick="@{()-> viewmodal.authenticateUser()}"
                    android:padding="@dimen/_8sdp"
                    android:src="@drawable/ic_arrow" />

            </LinearLayout>

            <TextView
                android:id="@+id/tv_having_trouble"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/margin_16"
                android:fontFamily="@font/worksans_medium"
                android:text="@string/having_trouble"
                android:textColor="@color/blue"
                android:textSize="@dimen/_11ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_signin" />

            <TextView
                android:id="@+id/tv_not_you"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/_10sdp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/worksans_medium"
                android:gravity="center"
                android:onClick="@{() -> viewmodal.navigateToSignup()}"
                android:text="@string/not_you"
                android:textColor="@color/black"
                android:textSize="@dimen/_11ssp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_signin"
                app:layout_constraintVertical_bias="0.100000024" />


        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>