<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_bg">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            android:backgroundTint="@color/black_bg"
            android:fontFamily="@font/worksans_bold"
            android:onClick="@{()-> viewmodal.authenticateUser()}"
            android:padding="@dimen/_8sdp"
            android:src="@drawable/back_arrow_icon"
            app:layout_constraintBottom_toTopOf="@+id/ll_register_"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/tv_profile_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/_8ssp"
            android:focusableInTouchMode="true"
            android:fontFamily="@font/worksans_bold"
            android:singleLine="true"
            android:text="Profile"
            android:textColor="@color/white"
            android:textSize="@dimen/text_18sp"
            app:layout_constraintBottom_toTopOf="@+id/ll_register_"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.376"
            app:layout_constraintRight_toLeftOf="@+id/btn_back"
            app:layout_constraintStart_toEndOf="@+id/btn_back"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.512" />

        <TextView
            android:id="@+id/tv_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/_8ssp"
            android:focusableInTouchMode="true"
            android:fontFamily="@font/worksans_bold"
            android:singleLine="true"
            android:text="Edit"
            android:textColor="@color/red"
            android:textSize="@dimen/text_18sp"
            app:layout_constraintBottom_toTopOf="@+id/ll_register_"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.644"
            app:layout_constraintRight_toLeftOf="@+id/tv_profile_header"
            app:layout_constraintStart_toEndOf="@+id/tv_profile_header"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.512" />

        <LinearLayout
            android:id="@+id/ll_register_"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/top_half_rounded_border_light_white"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_8ssp"
                android:layout_marginTop="@dimen/_18ssp"
                android:layout_marginRight="@dimen/_8ssp"
                android:layout_marginBottom="@dimen/_8ssp"
                android:background="@drawable/rounded_border_gray"
                android:focusableInTouchMode="true"
                android:fontFamily="@font/worksans_medium"
                android:hint="@string/name"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:padding="@dimen/_9sdp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="@dimen/text_14sp"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_welcome_back" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_8ssp"
                android:background="@drawable/rounded_border_gray"
                android:focusableInTouchMode="true"
                android:fontFamily="@font/worksans_medium"
                android:hint="@string/mobile"
                android:imeOptions="actionDone"
                android:inputType="textEmailAddress"
                android:padding="@dimen/_9sdp"
                android:singleLine="true"
                android:text=""
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="@dimen/text_14sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_dob" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_8ssp"
                android:background="@drawable/rounded_border_gray"
                android:focusableInTouchMode="true"
                android:fontFamily="@font/worksans_medium"
                android:hint="@string/email"
                android:imeOptions="actionDone"
                android:inputType="textEmailAddress"
                android:padding="@dimen/_9sdp"
                android:singleLine="true"
                android:text=""
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="@dimen/text_14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ed_mobile" />

            <TextView
                android:id="@+id/tv_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/card_view_five"
                android:layout_alignParentBottom="true"
                android:layout_gravity="bottom"
                android:layout_margin="@dimen/_15sdp"
                android:background="@drawable/rounded_fill_black"
                android:focusableInTouchMode="true"
                android:fontFamily="@font/worksans_medium"
                android:gravity="center"
                android:padding="@dimen/_11sdp"
                android:singleLine="true"
                android:text="Save"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="@dimen/_15ssp" />
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>
